force-app/main/default/objects/Case/fields/Demo_Pekerjaan__c.field-meta.xml
<CustomField>
    <fullName>Demo_Pekerjaan__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pekerjaan</label>
    <length>120</length>
    <type>Text</type>
</CustomField>