force-app/main/default/objects/Case/fields/Demo_RT_RW__c.field-meta.xml
<CustomField>
    <fullName>Demo_RT_RW__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RT/RW</label>
    <length>20</length>
    <type>Text</type>
</CustomField>