force-app/main/default/objects/Case/fields/Demo_Status_Match__c.field-meta.xml
<CustomField>
    <fullName>Demo_Status_Match__c</fullName>
    <label>[Demo] Status Match</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Match</fullName>
            </value>
            <value>
                <fullName>Not Match</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>