force-app/main/default/objects/Case/fields/Demo_Status_Perkawinan__c.field-meta.xml
<CustomField>
    <fullName>Demo_Status_Perkawinan__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Perkawinan</label>
    <length>120</length>
    <type>Text</type>
</CustomField>