force-app/main/default/objects/Case/fields/Demo_Tempat_Tanggal_Lahir_KTP__c.field-meta.xml
<CustomField>
    <fullName>Demo_Tempat_Tanggal_Lahir_KTP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tempat Tanggal Lahir KTP</label>
    <length>225</length>
    <type>Text</type>
</CustomField>