force-app/main/default/objects/Case/fields/DemoVRA_is_Ktp_KYC_processed__c.field-meta.xml
<CustomField>
    <fullName>DemoVRA_is_Ktp_KYC_processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[DemoVRA] is Ktp KYC processed</label>
    <type>Checkbox</type>
</CustomField>