force-app/main/default/objects/Case/fields/Document_Finalized_date_time__c.field-meta.xml
<CustomField>
    <fullName>Document_Finalized_date_time__c</fullName>
    <label>Document Finalized date time</label>
    <type>DateTime</type>
</CustomField>