force-app/main/default/objects/Case/fields/Dokumen_Nasabah__c.field-meta.xml
<CustomField>
    <fullName>Dokumen_Nasabah__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dokumen Nasabah</label>
    <type>Checkbox</type>
</CustomField>