force-app/main/default/objects/Case/fields/Dokumen_Nasabah_c__c.field-meta.xml
<CustomField>
    <fullName>Dokumen_Nasabah_c__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Jika terdapat &apos;List Dokumen yang Dibutuhkan&apos; tetapi Ticket ini tidak memerlukan dokumen dan ingin tereskalasi secara langsung, maka silakan centang field berikut.

Field ini pun dapat tercentang otomatis jika nasabah sudah mengirimkan dokumen melalui email dan/atau sudah dilakukan upload file manual di Ticket.</inlineHelpText>
    <label>Dokumen Nasabah</label>
    <type>Checkbox</type>
</CustomField>