force-app/main/default/objects/Case/fields/Done_Survey__c.field-meta.xml
<CustomField>
    <fullName>Done_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Done Survey</label>
    <type>Checkbox</type>
</CustomField>