force-app/main/default/objects/Case/fields/Due_Date_PIC__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_PIC__c</fullName>
    <label>Due Date PIC</label>
    <type>Date</type>
</CustomField>