force-app/main/default/objects/Case/fields/Due_Date_Uker__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Uker__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Due Date Uker</label>
    <type>Date</type>
</CustomField>