force-app/main/default/objects/Case/fields/Exc_Autoclose__c.field-meta.xml
<CustomField>
    <fullName>Exc_Autoclose__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exc Autoclose</label>
    <type>Checkbox</type>
</CustomField>