force-app/main/default/objects/Case/fields/Exp_Date_Kartu__c.field-meta.xml
<CustomField>
    <fullName>Exp_Date_Kartu__c</fullName>
    <inlineHelpText>MM/YY</inlineHelpText>
    <label>Exp Date Kartu</label>
    <type>Date</type>
</CustomField>