force-app/main/default/objects/Case/fields/Expired_Date_SIM__c.field-meta.xml
<CustomField>
    <fullName>Expired_Date_SIM__c</fullName>
    <label>Expired Date SIM</label>
    <type>Date</type>
</CustomField>