force-app/main/default/objects/Case/fields/Extend__c.field-meta.xml
<CustomField>
    <fullName>Extend__c</fullName>
    <label>Extend</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>