force-app/main/default/objects/Case/fields/Flag_Rekening_Penipu__c.field-meta.xml
<CustomField>
    <fullName>Flag_Rekening_Penipu__c</fullName>
    <formula>SCC_Call_Type__r.Rekening_Penipu__c</formula>
    <label>Flag Rekening Penipu</label>
    <type>Checkbox</type>
</CustomField>