force-app/main/default/objects/Case/fields/FlagSubmitReturn__c.field-meta.xml
<CustomField>
    <fullName>FlagSubmitReturn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FlagSubmitReturn</label>
    <type>Checkbox</type>
</CustomField>