force-app/main/default/objects/Case/fields/Formulir_Detail__c.field-meta.xml
<CustomField>
    <fullName>Formulir_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Formulir Detail</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Formulir_Detail__c.Case_Type__c</field>
            <operation>equals</operation>
            <valueField>$Source.SCC_Call_Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Formulir_Detail__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>