force-app/main/default/objects/Case/fields/FromSosmed__c.field-meta.xml
<CustomField>
    <fullName>FromSosmed__c</fullName>
    <formula>ISPICKVAL(Origin, &quot;Instagram&quot;) || ISPICKVAL(Origin, &quot;YouTube&quot;) || ISPICKVAL(Origin, &quot;Twitter&quot;) || ISPICKVAL(Origin, &quot;Facebook&quot;) || ISPICKVAL(Origin, &quot;Google Play Store&quot;) || ISPICKVAL(Origin, &quot;Apple App Store&quot;) || ISPICKVAL(Origin, &quot;TikTok&quot;)</formula>
    <label>From Sosmed</label>
    <type>Checkbox</type>
</CustomField>