force-app/main/default/objects/Case/fields/Gangguan_Massal__c.field-meta.xml
<CustomField>
    <fullName>Gangguan_Massal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Silahkan di ceklis jika case merupakan gangguan massal</inlineHelpText>
    <label>Termasuk Gangguan Massal</label>
    <type>Checkbox</type>
</CustomField>