force-app/main/default/objects/Case/fields/Gap_Terhadap_SLA__c.field-meta.xml
<CustomField>
    <fullName>Gap_Terhadap_SLA__c</fullName>
    <formula>Total_SLA_2__c - SLA_saat_ini__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gap Terhadap SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>