force-app/main/default/objects/Case/fields/GIC_Pelaksana__c.field-meta.xml
<CustomField>
    <fullName>GIC_Pelaksana__c</fullName>
    <formula>IF( ISBLANK( TEXT(Divisi__c) ) , TEXT(Kanwil__c) , TEXT(Divisi__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GIC Pelaksana (Divisi/RO)</label>
    <type>Text</type>
</CustomField>