force-app/main/default/objects/Case/fields/GIC_Pelaksana_Orgeh__c.field-meta.xml
<CustomField>
    <fullName>GIC_Pelaksana_Orgeh__c</fullName>
    <formula>Owner:User.SCC_Orgeh_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GIC Pelaksana (Orgeh)</label>
    <type>Text</type>
</CustomField>