force-app/main/default/objects/Case/fields/GIC_Pembuat__c.field-meta.xml
<CustomField>
    <fullName>GIC_Pembuat__c</fullName>
    <formula>CreatedBy.SCC_Orgeh_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GIC Pembuat</label>
    <type>Text</type>
</CustomField>