force-app/main/default/objects/Case/fields/Golongan_Darah_Form_Demo__c.field-meta.xml
<CustomField>
    <fullName>Golongan_Darah_Form_Demo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Golongan Darah_Form</label>
    <length>10</length>
    <type>Text</type>
</CustomField>