force-app/main/default/objects/Case/fields/Hasil_Penelitian__c.field-meta.xml
<CustomField>
    <fullName>Hasil_Penelitian__c</fullName>
    <label>Hasil Penelitian</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Komplain__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agunan Berpindah Tangan</fullName>
            </value>
            <value>
                <fullName>Agunan masih di Bank BRI</fullName>
            </value>
            <value>
                <fullName>Agunan sudah diserahkan</fullName>
            </value>
            <value>
                <fullName>Asuransi Tidak Terdaftar</fullName>
            </value>
            <value>
                <fullName>Belum Restrukturisasi</fullName>
            </value>
            <value>
                <fullName>Capacity Repayment tidak terpenuhi</fullName>
            </value>
            <value>
                <fullName>Card Trapping</fullName>
            </value>
            <value>
                <fullName>Data Belum Terupdate Kepada Kementrian Keuangan</fullName>
            </value>
            <value>
                <fullName>Data Keterangan iDeb SLIK sudah sesuai</fullName>
            </value>
            <value>
                <fullName>Debitur Tidak</fullName>
            </value>
            <value>
                <fullName>Kurang bayar (Pokok/Biaya/Denda/Bunga)</fullName>
            </value>
            <value>
                <fullName>Dokumen Dokumen klaim kurang</fullName>
            </value>
            <value>
                <fullName>Dokumen sudah tidak tersedia</fullName>
            </value>
            <value>
                <fullName>Dokumen telah diserahkan</fullName>
            </value>
            <value>
                <fullName>Double NIK (Pinjaman Valid- Debitur BRI blm e KTP)</fullName>
            </value>
            <value>
                <fullName>Fraud Eksternal</fullName>
            </value>
            <value>
                <fullName>Fraud Internal</fullName>
            </value>
            <value>
                <fullName>Hilang</fullName>
            </value>
            <value>
                <fullName>Keberatan Denda</fullName>
            </value>
            <value>
                <fullName>Kesalahan Pemblokiran</fullName>
            </value>
            <value>
                <fullName>Kesalahan pencantuman data data program</fullName>
            </value>
            <value>
                <fullName>Kesalahan pencantuman NIK atau CIF di Unit kerja atau System</fullName>
            </value>
            <value>
                <fullName>Kesalahan Penginputan Oleh Petugas</fullName>
            </value>
            <value>
                <fullName>Kesalahan penginputan transcode</fullName>
            </value>
            <value>
                <fullName>Kesalahan Sistem</fullName>
            </value>
            <value>
                <fullName>Klaim sesuai prosedur</fullName>
            </value>
            <value>
                <fullName>Kolektibiltas pinjaman tidak</fullName>
            </value>
            <value>
                <fullName>kurang lancar</fullName>
            </value>
            <value>
                <fullName>Laporan benefit</fullName>
            </value>
            <value>
                <fullName>Laporan prosedur atau tata kerja</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>