force-app/main/default/objects/Case/fields/Highlight_Customer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Highlight_Customer_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Highlight Customer Notes</label>
    <type>TextArea</type>
</CustomField>