force-app/main/default/objects/Case/fields/Holiday__c.field-meta.xml
<CustomField>
    <fullName>Holiday__c</fullName>
    <label>Holiday</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>