force-app/main/default/objects/Case/fields/House_Phone__c.field-meta.xml
<CustomField>
    <fullName>House_Phone__c</fullName>
    <label>House Phone</label>
    <type>Phone</type>
</CustomField>