force-app/main/default/objects/Case/fields/In_Periode_QA_Response__c.field-meta.xml
<CustomField>
    <fullName>In_Periode_QA_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Periode - QA Response</label>
    <type>Checkbox</type>
</CustomField>