force-app/main/default/objects/Case/fields/Inactive_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Case_Type__c</fullName>
    <formula>SCC_Call_Type__r.Active__c = FALSE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inactive Case Type</label>
    <type>Checkbox</type>
</CustomField>