force-app/main/default/objects/Case/fields/Insurance_Policy__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Policy</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>