force-app/main/default/objects/Case/fields/Invitation_Link__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Link__c</fullName>
    <label>Invitation Link</label>
    <type>Url</type>
</CustomField>