force-app/main/default/objects/Case/fields/is_Penilaian_QA__c.field-meta.xml
<CustomField>
    <fullName>is_Penilaian_QA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Penilaian QA</label>
    <type>Checkbox</type>
</CustomField>