force-app/main/default/objects/Case/fields/Is_Queue__c.field-meta.xml
<CustomField>
    <fullName>Is_Queue__c</fullName>
    <formula>LEFT(OwnerId, 3)!= &apos;005&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Queue</label>
    <type>Checkbox</type>
</CustomField>