force-app/main/default/objects/Case/fields/IsClosed__c.field-meta.xml
<CustomField>
    <fullName>IsClosed__c</fullName>
    <formula>IF(CASE(TEXT(Status), &apos;Closed&apos;, &apos;1&apos;, &apos;Cancelled&apos;, &apos;1&apos;,&apos;Disconnected&apos;, &apos;1&apos;, &apos;0&apos;)==&apos;1&apos;,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsClosed</label>
    <type>Checkbox</type>
</CustomField>