force-app/main/default/objects/Case/fields/IsLocked__c.field-meta.xml
<CustomField>
    <fullName>IsLocked__c</fullName>
    <formula>IF((TEXT(Approval_Status__c)==&apos;Draft&apos; || TEXT(Approval_Status__c)==&apos;Rejected&apos; || ISBLANK(TEXT(Approval_Status__c))) &amp;&amp; !IsClosed__c,FALSE,TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsLocked</label>
    <type>Checkbox</type>
</CustomField>