force-app/main/default/objects/Case/fields/isTotalSLAViolated__c.field-meta.xml
<CustomField>
    <fullName>isTotalSLAViolated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isTotalSLAViolated</label>
    <type>Checkbox</type>
</CustomField>