force-app/main/default/objects/Case/fields/Jenis_Kelamin_Form_Demo__c.field-meta.xml
<CustomField>
    <fullName>Jenis_Kelamin_Form_Demo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Jenis Kelamin Form</label>
    <length>120</length>
    <type>Text</type>
</CustomField>