force-app/main/default/objects/Case/fields/Jumlah_EJ__c.field-meta.xml
<CustomField>
    <fullName>Jumlah_EJ__c</fullName>
    <label>Jumlah EJ</label>
    <summaryForeignKey>EJ__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>