force-app/main/default/objects/Case/fields/Jumlah_hari_SLA_Regulator__c.field-meta.xml
<CustomField>
    <fullName>Jumlah_hari_SLA_Regulator__c</fullName>
    <label>Jumlah hari SLA Regulator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>22</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>