force-app/main/default/objects/Case/fields/Kantor_Cabang_Bagian__c.field-meta.xml
<CustomField>
    <fullName>Kantor_Cabang_Bagian__c</fullName>
    <formula>KCP_Unit_KK_Seksi__r.Nama_Cabang__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kantor Cabang/Bagian</label>
    <type>Text</type>
</CustomField>