force-app/main/default/objects/Case/fields/Kantor_Cabang_Metro__c.field-meta.xml
<CustomField>
    <fullName>Kantor_Cabang_Metro__c</fullName>
    <label>Kantor Cabang Metro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ya</fullName>
            </value>
            <value>
                <fullName>Tidak</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>