force-app/main/default/objects/Case/fields/Kantor_Wilayah_Divisi__c.field-meta.xml
<CustomField>
    <fullName>Kantor_Wilayah_Divisi__c</fullName>
    <formula>TEXT(KCP_Unit_KK_Seksi__r.Kanwil__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kantor Wilayah/Divisi</label>
    <type>Text</type>
</CustomField>