force-app/main/default/objects/Case/fields/KCP_Unit_KK_Seksi__c.field-meta.xml
<CustomField>
    <fullName>KCP_Unit_KK_Seksi__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KCP/Unit/ KK/Seksi</label>
    <referenceTo>Branch_Unit__c</referenceTo>
    <relationshipLabel>Cases (Kode Uker KCP/Unit/ KK/Seksi)</relationshipLabel>
    <relationshipName>BranchUnit</relationshipName>
    <type>Lookup</type>
</CustomField>