force-app/main/default/objects/Case/fields/Kebutuhan_Hari_Perpanjangan__c.field-meta.xml
<CustomField>
    <fullName>Kebutuhan_Hari_Perpanjangan__c</fullName>
    <label>Kebutuhan Hari Perpanjangan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>