force-app/main/default/objects/Case/fields/Kel_Desa_Form_Demo__c.field-meta.xml
<CustomField>
    <fullName>Kel_Desa_Form_Demo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Kelurahan/Desa Form</label>
    <length>120</length>
    <type>Text</type>
</CustomField>