force-app/main/default/objects/Case/fields/Kewarganegaraan_Form_Demo__c.field-meta.xml
<CustomField>
    <fullName>Kewarganegaraan_Form_Demo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Kewarganegaraan Form</label>
    <length>120</length>
    <type>Text</type>
</CustomField>