force-app/main/default/objects/Case/fields/Kode_BO__c.field-meta.xml
<CustomField>
    <fullName>Kode_BO__c</fullName>
    <formula>Unit_Kerja_2__r.Kode_Cabang__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kode BO</label>
    <type>Text</type>
</CustomField>