force-app/main/default/objects/Case/fields/Kode_Branch__c.field-meta.xml
<CustomField>
    <fullName>Kode_Branch__c</fullName>
    <formula>LEFT( SCC_Account_Number__c , 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kode Branch</label>
    <type>Text</type>
</CustomField>