force-app/main/default/objects/Case/fields/Kode_Kanwil__c.field-meta.xml
<CustomField>
    <fullName>Kode_Kanwil__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Kode Kanwil</label>
    <length>100</length>
    <type>Text</type>
</CustomField>