force-app/main/default/objects/Case/fields/Kode_Uker__c.field-meta.xml
<CustomField>
    <fullName>Kode_Uker__c</fullName>
    <formula>Unit_Kerja_2__r.Branch_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kode Uker</label>
    <type>Text</type>
</CustomField>