force-app/main/default/objects/Case/fields/Kode_Uker_KCP_Unit_KK_Seksi__c.field-meta.xml
<CustomField>
    <fullName>Kode_Uker_KCP_Unit_KK_Seksi__c</fullName>
    <formula>KCP_Unit_KK_Seksi__r.Branch_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kode Uker KCP/Unit/ KK/Seksi</label>
    <type>Text</type>
</CustomField>