force-app/main/default/objects/Case/fields/Komplain__c.field-meta.xml
<CustomField>
    <fullName>Komplain__c</fullName>
    <label>Komplain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>iDeb SLIK</fullName>
            </value>
            <value>
                <fullName>Sanggahan Transaksi</fullName>
            </value>
            <value>
                <fullName>Sanggahan Pinjaman/Kartu Kredit</fullName>
            </value>
            <value>
                <fullName>Laporan Penipuan</fullName>
            </value>
            <value>
                <fullName>Sanggahan Pembuatan Simpanan</fullName>
            </value>
            <value>
                <fullName>Permohonan Keringanan</fullName>
            </value>
            <value>
                <fullName>Keberatan Lelang</fullName>
            </value>
            <value>
                <fullName>Pembayaran Tagihan Tidak Sesuai</fullName>
            </value>
            <value>
                <fullName>Agunan</fullName>
            </value>
            <value>
                <fullName>Pelunasan Maju</fullName>
            </value>
            <value>
                <fullName>Keberatan Penagihan</fullName>
            </value>
            <value>
                <fullName>Asuransi</fullName>
            </value>
            <value>
                <fullName>Komplain Pemblokiran</fullName>
            </value>
            <value>
                <fullName>Salah Transfer</fullName>
            </value>
            <value>
                <fullName>Kebocoran Data</fullName>
            </value>
            <value>
                <fullName>Pengajuan Pinjaman</fullName>
            </value>
            <value>
                <fullName>Permohonan Dokumen / Data Pinjaman</fullName>
            </value>
            <value>
                <fullName>Pencairan Pinjaman</fullName>
            </value>
            <value>
                <fullName>Lainnya</fullName>
            </value>
            <value>
                <fullName>Laporan Pekerja / Keluarga BRI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>