force-app/main/default/objects/Case/fields/Komplain_APPK__c.field-meta.xml
<CustomField>
    <fullName>Komplain_APPK__c</fullName>
    <label>Komplain APPK</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agunan</fullName>
            </value>
            <value>
                <fullName>Asuransi</fullName>
            </value>
            <value>
                <fullName>Deposito</fullName>
            </value>
            <value>
                <fullName>Dokumen atau Data atau Informasi</fullName>
            </value>
            <value>
                <fullName>Gagal atau Salah Transfer</fullName>
            </value>
            <value>
                <fullName>iDeb SLIK</fullName>
            </value>
            <value>
                <fullName>Keberatan Lelang</fullName>
            </value>
            <value>
                <fullName>Keberatan Penagihan</fullName>
            </value>
            <value>
                <fullName>Kebocoran Data</fullName>
            </value>
            <value>
                <fullName>Komplain Pemblokiran</fullName>
            </value>
            <value>
                <fullName>Komplain SIKP</fullName>
            </value>
            <value>
                <fullName>Laporan Pekerja atau Keluarga BRI</fullName>
            </value>
            <value>
                <fullName>Laporan Pelayanan</fullName>
            </value>
            <value>
                <fullName>Laporan Penipuan</fullName>
            </value>
            <value>
                <fullName>Pelunasan Maju</fullName>
            </value>
            <value>
                <fullName>Pembayaran Tagihan Tidak Sesuai</fullName>
            </value>
            <value>
                <fullName>Pencairan</fullName>
            </value>
            <value>
                <fullName>Pengajuan Pinjaman</fullName>
            </value>
            <value>
                <fullName>Permohonan Keringanan</fullName>
            </value>
            <value>
                <fullName>Sanggahan Pembuatan Simpanan</fullName>
            </value>
            <value>
                <fullName>Sanggahan Pinjaman atau Kartu Kredit</fullName>
            </value>
            <value>
                <fullName>Sanggahan Transaksi</fullName>
            </value>
            <value>
                <fullName>Suku bunga</fullName>
            </value>
            <value>
                <fullName>Lainnya</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>