force-app/main/default/objects/Case/fields/Konfirmasi_Mediasi_Diterima_Ditolak__c.field-meta.xml
<CustomField>
    <fullName>Konfirmasi_Mediasi_Diterima_Ditolak__c</fullName>
    <label>Konfirmasi Mediasi (Diterima/Ditolak)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bulan</valueSetName>
    </valueSet>
</CustomField>