force-app/main/default/objects/Case/fields/Koordinat_Survey__c.field-meta.xml
<CustomField>
    <fullName>Koordinat_Survey__c</fullName>
    <label>Koordinat Survey</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>