force-app/main/default/objects/Case/fields/Location_Survey__c.field-meta.xml
<CustomField>
    <fullName>Location_Survey__c</fullName>
    <label>Location Survey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>