force-app/main/default/objects/Case/fields/Main_Branch__c.field-meta.xml
<CustomField>
    <fullName>Main_Branch__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Main Branch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>