force-app/main/default/objects/Case/fields/Main_Branch_Description__c.field-meta.xml
<CustomField>
    <fullName>Main_Branch_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Main Branch Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>