force-app/main/default/objects/Case/fields/Maker__c.field-meta.xml
<CustomField>
    <fullName>Maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>