force-app/main/default/objects/Case/fields/Maker_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Maker_Submit_Date__c</fullName>
    <label>Maker Submit Date</label>
    <type>Date</type>
</CustomField>