force-app/main/default/objects/Case/fields/Menghitung_SLA_Regulator2__c.field-meta.xml
<CustomField>
    <fullName>Menghitung_SLA_Regulator2__c</fullName>
    <label>Menghitung SLA Regulator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>