force-app/main/default/objects/Case/fields/Merchant_Type__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Type__c</fullName>
    <label>Merchant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qris</fullName>
            </value>
            <value>
                <fullName>EDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>