force-app/main/default/objects/Case/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <formula>TEXT(Source:SocialPost.MessageType)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Message Type</label>
    <type>Text</type>
</CustomField>