force-app/main/default/objects/Case/fields/MidSLA_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>MidSLA_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MidSLA Date Time</label>
    <type>DateTime</type>
</CustomField>