force-app/main/default/objects/Case/fields/MMS_File__c.field-meta.xml
<CustomField>
    <fullName>MMS_File__c</fullName>
    <label>MMS File</label>
    <length>255</length>
    <type>Text</type>
</CustomField>