force-app/main/default/objects/Case/fields/MPN_ID__c.field-meta.xml
<CustomField>
    <fullName>MPN_ID__c</fullName>
    <label>MPN ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>