force-app/main/default/objects/Case/fields/Net_SLA_Saat_Ini__c.field-meta.xml
<CustomField>
    <fullName>Net_SLA_Saat_Ini__c</fullName>
    <formula>SLA_saat_ini__c - Waiting_Document_Duration__c - Holiday__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net SLA Saat Ini</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>