force-app/main/default/objects/Case/fields/NIK_Form_Demo__c.field-meta.xml
<CustomField>
    <fullName>NIK_Form_Demo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NIK Form</label>
    <length>20</length>
    <type>Text</type>
</CustomField>