force-app/main/default/objects/Case/fields/No_Remintance__c.field-meta.xml
<CustomField>
    <fullName>No_Remintance__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>No Remintance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>