force-app/main/default/objects/Case/fields/No_Surat_Masuk_dari_Uker__c.field-meta.xml
<CustomField>
    <fullName>No_Surat_Masuk_dari_Uker__c</fullName>
    <label>No. Surat Masuk dari Uker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>