force-app/main/default/objects/Case/fields/No_Telp_PIC__c.field-meta.xml
<CustomField>
    <fullName>No_Telp_PIC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>No Telp PIC</label>
    <type>Phone</type>
</CustomField>