force-app/main/default/objects/Case/fields/No_Tiket_MMS__c.field-meta.xml
<CustomField>
    <fullName>No_Tiket_MMS__c</fullName>
    <label>No Tiket MMS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>