force-app/main/default/objects/Case/fields/Nomor_Kartu__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Kartu__c</fullName>
    <label>Nomor Kartu (Jangan Dipakai)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>