force-app/main/default/objects/Case/fields/Nomor_Mesin__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Mesin__c</fullName>
    <label>Nomor Mesin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>