force-app/main/default/objects/Case/fields/Nomor_Rekening_Penipu__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Rekening_Penipu__c</fullName>
    <label>Nomor Rekening Penipu</label>
    <length>30</length>
    <type>Text</type>
</CustomField>